--- a/index.html
+++ b/index.html
@@ -12,10 +12,55 @@
         margin: 0;
         overflow: hidden;
       }
+
+      canvas[resize] {
+          width: 100%;
+          height: 100%;
+      }
     </style>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" resize keepalive="true"></canvas>
     <script type="module" src="/src/main.ts"></script>
+    <div id="toolbar">
+      <button id="panButton" class="toolbar-button selected">Pan 🤚 (1)</button>
+      <button id="foldButton" class="toolbar-button">Fold 🤏 (2)</button>
+    </div>
+    <style>
+      #toolbar {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.9);
+        display: flex;
+        justify-content: center;
+        padding: 10px 0;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+      }
+
+      .toolbar-button {
+        border: 2px solid #ccc;
+        background: none;
+        padding: 10px 20px;
+        margin: 0 5px;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: all 0.2s ease;
+      }
+
+      .toolbar-button.selected {
+        border-color: #007BFF;
+        color: #007BFF;
+        /* font-weight: bold; */
+      }
+
+      .toolbar-button:hover {
+        border-color: #0056b3;
+        color: #0056b3;
+      }
+    </style>
   </body>
 </html>
