--- a/index.html
+++ b/index.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrei Robu &lt;/&gt; Freelance Web Developer</title>
     <style>
-      body {
+      html, body {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         margin: 0;
+        padding: 0;
+      }
+
+      body {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
         overflow: hidden;
       }
 
-      canvas[resize] {
-          width: 100%;
-          height: 100%;
+      #canvas {
+        flex: 1 1 auto;
+        width: 100%;
+        height: 100%;
+        display: block;
       }
     </style>
   </head>
@@ -28,9 +37,6 @@
     </div>
     <style>
       #toolbar {
-        position: fixed;
-        bottom: 0;
-        left: 0;
         width: 100%;
         background-color: rgba(255, 255, 255, 0.9);
         display: flex;
@@ -38,6 +44,7 @@
         padding: 10px 0;
         box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
         z-index: 1000;
+        /* Remove position: fixed and bottom: 0; */
       }
 
       .toolbar-button {
