set tool to pan and hide toolbar increase grid

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
         <canvas id="canvas" resize keepalive="true"></canvas>
         <script type="module" src="./src/main.ts"></script>
-        <div id="toolbar">
+        <div id="toolbar" style="display: none">
             <button id="panButton" class="toolbar-button selected">Pan 🤚 (1)</button>
             <button id="foldButton" class="toolbar-button">Fold 🤏 (2)</button>
         </div>
