--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </style>
     </head>
     <body>
-        <canvas id="canvas" resize keepalive="true"></canvas>
+        <canvas id="canvas" resize></canvas>
         <script type="module" src="./src/main.ts"></script>
         <div id="toolbar" style="display: none">
             <button id="panButton" class="toolbar-button selected">Pan 🤚 (1)</button>
