--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="./logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Andrei Robu &lt;/&gt; Freelance Web Developer</title>
+        <title>Procedurally Generated Folding Animation</title>
         <style>
             html,
             body {
